# CPP-Simple-Text-Editor

./: .gitignore  CMakeLists.txt
include/: ActivityHistory.h  buffer.h  command_execution.h  commands.h  file_interaction.h
include/models/: AppContext.h  CommandManager.h  TextEditor.h
include/models/abstract/: Command.h
include/models/commands/: AddLineCommand.h  AppendTextCommand.h  CutTextCommand.h  DeleteTextCommand.h  InsertTextCommand.h  PasteTextCommand.h  ReplaceTextCommand.h
src/: ActivityHistory.cpp  buffer.cpp  command_execution.cpp  commands.cpp  file_interaction.cpp  main.cpp
src/models/: Buffer.cpp  CommandManager.cpp  TextEditor.cpp
src/models/commands/: AddLineCommand.cpp  AppendTextCommand.cpp  CutTextCommand.cpp  DeleteTextCommand.cpp  InsertTextCommand.cpp  PasteTextCommand.cpp  ReplaceTextCommand.cpp
